docs: mettre à jour Swagger des églises
